@@ -1,4 +1,4 @@
 #define RUBY_VERSION "1.6.7"
-#define RUBY_RELEASE_DATE "2002-07-30"
+#define RUBY_RELEASE_DATE "2002-07-31"
 #define RUBY_VERSION_CODE 167
-#define RUBY_RELEASE_CODE 20020730
+#define RUBY_RELEASE_CODE 20020731
